--- a/playbooks/remove_students.yml
+++ b/playbooks/remove_students.yml
@@ -27,9 +27,17 @@
       force: yes
     with_items: "{{  students  }}"
 
-  - name: Start lightdm service
+  - name: Check if lightdm service exists (stat module)
+    stat: path=/etc/init.d/lightdm
+    register: service_stat2
+
+  - name: Check if lightdm service exists (service module)
+    service: name=lightdm
+    register: service2
+
+  - name: Start lightdm service if exists and is stopped
     service:
       name: lightdm
       state: started
-    when: service_stat.stat.exists and service.status.SubState == 'Dead'
+    when: service_stat2.stat.exists and service2.status.SubState == 'dead'
     register: service_started
