--- a/playbooks/reboot_a27.yml
+++ b/playbooks/reboot_a27.yml
@@ -4,8 +4,4 @@
 #  user: root
 
   tasks:
-    - name: Reboot computer
-      command: init 6
-      async: 0
-      poll: 0
-      ignore_errors: yes
+  - import_tasks: tasks/init_6.yml
