--- a/playbooks/install_a27_software.yml
+++ b/playbooks/install_a27_software.yml
@@ -5,5 +5,6 @@
     - data/install_packages.yml
 
   tasks:
+  - import_tasks: tasks/update_local_repositories_cache.yml
   - import_tasks: tasks/install_packages.yml
   - import_tasks: tasks/install_packages_from_url.yml
