--- a/playbooks/remove_a23_students.yml
+++ b/playbooks/remove_a23_students.yml
@@ -3,7 +3,7 @@
   become: yes
 
   vars_files:
-    - users/students.yml
+    - data/students.yml
 
   tasks:
   - import_tasks: tasks/stop_lightdm.yml
